--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -50,27 +50,6 @@
                                     <action selector="togglePlayPause:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Uw5-y7-gFp"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyi-v4-qiX" customClass="UIControlButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
-                                <rect key="frame" x="139.66666666666666" y="700" width="96" height="46"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="96" id="Dc6-28-5lJ"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <state key="normal" title="120">
-                                    <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <segue destination="9i7-qK-ccy" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="H5N-fU-8m3"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y8r-1J-ZFl">
-                                <rect key="frame" x="0.0" y="205" width="375" height="256"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
-                                <state key="normal">
-                                    <color key="titleColor" red="0.99607843137254903" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="huJ-0x-goJ" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
                                 <rect key="frame" x="40" y="712" width="16" height="22"/>
                                 <state key="normal" image="decrement"/>
@@ -87,6 +66,27 @@
                                     <action selector="incrementButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pLz-oE-SBb"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyi-v4-qiX" customClass="UIControlButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="139.66666666666666" y="700" width="96" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="96" id="Dc6-28-5lJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <state key="normal" title="120">
+                                    <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="9i7-qK-ccy" kind="presentation" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="H5N-fU-8m3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y8r-1J-ZFl">
+                                <rect key="frame" x="0.33333333333334281" y="88" width="375" height="690"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="0.99607843137254903" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.047058823529411764" green="0.047058823529411764" blue="0.047058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -98,11 +98,14 @@
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="9WH-lv-5nf"/>
                             <constraint firstItem="KrZ-CO-g8Q" firstAttribute="centerY" secondItem="lyi-v4-qiX" secondAttribute="centerY" id="Dsg-bD-E4z"/>
                             <constraint firstItem="huJ-0x-goJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="24" id="GRA-Id-h5u"/>
+                            <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="KXu-AI-OvP"/>
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:1" id="OnA-Dj-Zvq"/>
                             <constraint firstAttribute="centerY" secondItem="y8r-1J-ZFl" secondAttribute="centerY" id="PGb-wO-03X"/>
                             <constraint firstItem="huJ-0x-goJ" firstAttribute="centerY" secondItem="lyi-v4-qiX" secondAttribute="centerY" id="PVm-gZ-4FW"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="y8r-1J-ZFl" secondAttribute="bottom" id="Qsh-um-X4I"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lyi-v4-qiX" secondAttribute="bottomMargin" constant="40" id="S0i-o9-FPa"/>
-                            <constraint firstItem="r9f-r2-GK7" firstAttribute="centerY" secondItem="y8r-1J-ZFl" secondAttribute="centerY" id="eor-OO-2wy"/>
+                            <constraint firstItem="y8r-1J-ZFl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="efR-rt-LOi"/>
+                            <constraint firstItem="r9f-r2-GK7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="eor-OO-2wy"/>
                             <constraint firstAttribute="trailingMargin" secondItem="KrZ-CO-g8Q" secondAttribute="trailing" constant="24" id="gYu-xA-Y1o"/>
                             <constraint firstItem="lyi-v4-qiX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="mLu-EY-5DD"/>
                         </constraints>
@@ -110,6 +113,7 @@
                             <mask key="constraints">
                                 <exclude reference="9WH-lv-5nf"/>
                                 <exclude reference="OnA-Dj-Zvq"/>
+                                <exclude reference="PGb-wO-03X"/>
                             </mask>
                         </variation>
                     </view>
@@ -134,7 +138,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-470" y="448"/>
+            <point key="canvasLocation" x="-471.19999999999999" y="447.78325123152712"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="sZB-EN-lIg">
